Actions
Bug #13567
closederror when compiling localeinit.c on cygwin
Bug #13567:
error when compiling localeinit.c on cygwin
Description
I get the following when compiling localeinit.c on cygwin. Please fix, thanks!
compiling localeinit.c
localeinit.c: In function ‘locale_charmap’:
localeinit.c:50:18: error: ‘ruby_w32_codepage’ undeclared (first use in this function)
UINT codepage = ruby_w32_codepage;
^
localeinit.c:50:18: note: each undeclared identifier is reported only once for each function it appears in
localeinit.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-tautological-compare’
make: *** [Makefile:374: localeinit.o] Error 1
Updated by nobu (Nobuyoshi Nakada) almost 9 years ago
- Status changed from Open to Closed
Applied in changeset trunk|r58737.
enable ruby_w32_codepage on cygwin
- debug.c, localeinit.c: enable ruby_w32_codepage on cygwin too.
[ruby-core:81163] [Bug #13567]
Updated by usa (Usaku NAKAMURA) almost 9 years ago
- Backport changed from 2.2: UNKNOWN, 2.3: UNKNOWN, 2.4: UNKNOWN to 2.2: DONTNEED, 2.3: DONTNEED, 2.4: DONTNEED
Actions